--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=1234
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=1234
 #spring.datasource.url=jdbc:postgresql://tai.db.elephantsql.com:5432/jpkdcnat
 #spring.datasource.username=jpkdcnat
 #spring.datasource.password=QZNhv-vFRR1ezdV4Prn9PLoJci4hNAgl
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/funkcjonalne
+spring.datasource.username=postgres
+spring.datasource.password=1234
 
 
 spring.jpa.hibernate.ddl-auto=update
