--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,9 +5,15 @@
 #spring.datasource.username=jpkdcnat
 #spring.datasource.password=QZNhv-vFRR1ezdV4Prn9PLoJci4hNAgl
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/funkcjonalne
+#spring.datasource.url=jdbc:postgresql://localhost:5432/funkcjonalne
+#spring.datasource.username=postgres
+#spring.datasource.password=1234
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/wydajnosc
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
 
 spring.jpa.hibernate.ddl-auto=update
+
+#spring.jpa.hibernate.ddl-auto=create-drop
