--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@
 #spring.datasource.username=postgres
 #spring.datasource.password=1234
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/wydajnosc
+spring.datasource.url=jdbc:postgresql://localhost:5432/wydajnosc2
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
